--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <div id="navmaincontainer">
 <!-- THE MENU -->
 <!-- include virtual='/includes/menu.html' -->
-<script src="./includes/menu.js"></script>
+<nav id="navbar"></nav>
+<script type="text/javascript" src="./includes/menu.js"></script>
 
 <!-- THE BODY COLUMN --> 
 <div id="main">
