--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ben Reiniger's Home Page</title>
-<!-- include file='includes/headerdetails.html' -->
+<!--want 'includes/headerdetails.html' in here eventually -->
 </head>
 <body lang="EN-US">
 
