fix relative menu links

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 <title>Ben Reiniger's Home Page</title>
-<!--want 'includes/headerdetails.html' in here eventually -->
 </head>
 <body lang="EN-US">
 
 <div id="navmaincontainer">
 <!-- THE MENU -->
-<!-- include virtual='/includes/menu.html' -->
 <nav id="navbar"></nav>
-<script type="text/javascript" src="./includes/menu.js"></script>
+<script type="text/javascript" src="./includes/header+menu.js"></script>
 
 <!-- THE BODY COLUMN --> 
 <div id="main">
