--- a/research/index.html
+++ b/research/index.html
@@ -14,7 +14,8 @@
 
 <div id="navmaincontainer">
 <!-- THE MENU -->
-<?php include '../includes/menu.php'; ?>
+<nav id="navbar"></nav>
+<script type="text/javascript" src="../includes/header+menu.js"></script>
 
 
 <!-- THE BODY COLUMN --> 
