Lessen js for inclusions, fix links

--- a/teaching/17Spring/index.html
+++ b/teaching/17Spring/index.html
@@ -7,13 +7,20 @@
   border:1px solid gray;
 }
 </style>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta name="viewport" content="width=device-width" />
+<link rel="stylesheet" href="../../css/style.css" />
+<link rel="icon" type="image/ico" href="../../images/favicon.ico" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+<script type="text/javascript" src="../../includes/google-analytics.js" ></script>
+<script type="text/javascript" src="../../includes/MathJax.js" ></script>
 </head>
 <body lang="EN-US">
 
 <div id="navmaincontainer">
 <!-- THE MENU -->
 <nav id="navbar"></nav>
-<script type="text/javascript" src="../includes/header+menu.js"></script>
+<script type="text/javascript" src="../../includes/header+menu.js"></script>
 
 <!-- THE BODY COLUMN -->
 <div id="main">
