Add stackexchange link and social media hover texts

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 
 <!--(Professional) Social Media-->
 <span style="font-size: 3em">
-<a class="imagelink" href="https://mathstodon.xyz/@bmreiniger"><span class="fab fa-mastodon"></span></a>
-<a class="imagelink" href="https://www.researchgate.net/profile/Benjamin_Reiniger"><span class="fab fa-researchgate"></span></a>
-<a class="imagelink" href="https://www.linkedin.com/in/benjamin-reiniger-b29b146a/"><span class="fab fa-linkedin"></span></a>
-<a class="imagelink" href="https://bmreiniger.github.io/"><span class="fab fa-github"></span></a>
+<a class="imagelink" title="Mathstodon" href="https://mathstodon.xyz/@bmreiniger"><span class="fab fa-mastodon"></span></a>
+<a class="imagelink" title="Stack Exchange" href="https://datascience.stackexchange.com/users/55122/ben-reiniger"><span class="fab fa-stack-exchange"></span></a>
+<a class="imagelink" title="ResearchGate" href="https://www.researchgate.net/profile/Benjamin_Reiniger"><span class="fab fa-researchgate"></span></a>
+<a class="imagelink" title="LinkedIn" href="https://www.linkedin.com/in/benjamin-reiniger-b29b146a/"><span class="fab fa-linkedin"></span></a>
+<a class="imagelink" title="GitHub homepage" href="https://bmreiniger.github.io/"><span class="fab fa-github"></span></a>
 </span>
 </div><!--main-->
 </div><!--navmaincontainer-->
