--- a/teaching/18Spring/index.html
+++ b/teaching/18Spring/index.html
@@ -36,24 +36,145 @@
 <b>Office hours:</b> TBD, and by appointment
 </p>
 
-<p>See Blackboard for course materials.  After the semester I will migrate most files here.</p>
+<!--<p>See Blackboard for course materials.  After the semester I will migrate most files here.</p>-->
 
-<!--
+
 <h3>Schedule</h3>
 <table class="schedule" style="width: 579px; height: 550px; border:1px solid gray;">
 <tbody>
-<tr><th>Date</th><th>Log</th></tr>
+<tr>
+<td>Date</td>
+<td>Topics</td>
+</tr>
+<tr>
+<td>4/30 or 5/3</td>
+<td><strong>Final Exam </strong>- Choose either Monday 4/30 or Thursday 5/3.  2-4pm in RE121 on either date.</td>
+</tr>
+<tr>
+<td>4/26</td>
+<td>Bonus topics: Random graphs (Erdős-Rényi, preferential attachment, geometric), Earth-Moon problem, toroidal graphs, Hadwiger-Nelson problem (recent progress) <br />Review (notation, Ford-Fulkerson)<br />7.2:   Chvátal-Erdős condition</td>
+</tr>
+<tr>
+<td>4/24</td>
+<td>7.3:   Tait's Theorem<br />7.2:   Petersen is not Hamiltonian; sufficient conditions (Dirac, Ore)</td>
+</tr>
+<tr>
+<td>4/19</td>
+<td>7.2:   Hamiltonian cycles, necessary condition<br />7.1:   edge colorings, line graphs, Vizing's Theorem (only first part of proof), class 1/class 2 graphs</td>
+</tr>
+<tr>
+<td>4/17</td>
+<td>6.3:   chromatic number of planar graphs: easy proof that 6 colors suffice, Kempe chain proof that 5 colors suffice, statement that 4 colors suffice;  nothing else from this section<br />6.2:   subdivisions, Kuratowski's Theorem (w/o proof)<br />6.1:   equivalence for plane graphs of bipartite, even faces, Eulerian dual</td>
+</tr>
+<tr>
+<td>4/12</td>
+<td><strong>Exam 2</strong> - Chapters 5 (+list coloring), 3</td>
+</tr>
+<tr>
+<td>4/10</td>
+<td>6.1:   planar graphs, plane graphs, faces, dual graph; Euler's formula and edge-bound for simple (triangle-free) planar graphs</td>
+</tr>
+<tr>
+<td>4/5</td>
+<td>4.3:   network flows, duality with source-sink cuts, Fork-Fulkerson Algorithm, Max-flow=Min-cut (proof idea), Integrality (w/o proof)<br />4.2:   versions of Menger's Theorem for edge-connectivity, digraphs, and global versions  (w/o proofs)</td>
+</tr>
+<tr>
+<td>4/3</td>
+<td>4.2:   equivalent characterizations of 2-connected graphs (NOT ear decompositions); statement of Menger's Theorem (local version)<br />4.1:   bonds, blocks, block-cutpoint tree </td>
+</tr>
+<tr>
+<td>3/29</td>
+<td>4.1:   definitions, connectivity of hypercubes; relationship between connectivity, edge-connectivity, and minimum degree; 3-regular graphs have connectivity=edge-connectivity</td>
+</tr>
+<tr>
+<td>3/27</td>
+<td>3.3:   Tutte's 1-Factor Theorem (w/o proof), maximum matching size in terms of "deficiency" (w/o proof), Petersen's 3-regular cut-edge-free sufficient condition, and Petersen's 2-factor theorem<br />(NOT section 3.2)<br />3.1:   vertex covers and the Min-max relation to matchings; König<span style="color: #545454; font-family: Roboto, arial, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">-</span>Egerváry theorem<br />(NOT subsection on independence-edge cover min-max relation)</td>
+</tr>
+<tr>
+<td>3/22</td>
+<td>3.1:   augmenting paths, Hall's Matching Theorem</td>
+</tr>
+<tr>
+<td>3/20</td>
+<td>3.1:   definitions, examples<br />5.2:   finished proof of Mycielski properties; Turán's Theorem <br />(NOT subsections on color-critical properties or forced subdivisions)<br />reviewed exam</td>
+</tr>
+<tr>
+<td>3/8</td>
+<td><strong>Exam 1</strong> - Chapters 1, 2</td>
+</tr>
+<tr>
+<td>3/6</td>
+<td>Review?<br />5.2:   Mycielski's construction<br />5.1:   critical graphs, a coloring bound using orientations</td>
+</tr>
+<tr>
+<td>3/1</td>
+<td>8.4:   introduction to list coloring (p.408)<br />5.1:   upper bounds on chromatic number, using the greedy algorithm,<br />          including Brooks' Theorem and the chromatic number of interval graphs</td>
+</tr>
+<tr>
+<td>2/27</td>
+<td>5.1:   (proper) colorings, chromatic number, color-critical graphs; examples and lower bounds;<br />          Cartesian product of graphs</td>
+</tr>
+<tr>
+<td>2/22</td>
+<td>2.3:   proof of correctness for Kruskal; <br />Dijkstra's algorithm for Shortest Paths, breadth-first-search, Chinese Postman Problem</td>
+</tr>
+<tr>
+<td>2/20</td>
+<td>2.3:   weighted graphs, Kruskal's algorithm for Minimum Spanning Tree<br />2.2:   enumerating spanning trees, edge contraction, Matrix Tree theorem (no proof)<br />comments on HW4#2</td>
+</tr>
+<tr>
+<td>2/15</td>
+<td>(Pelsmajer)<br />2.2:   Cayley's formula, Prüfer codes<br />2.1:   Wiener index and its max/min values for trees and for all graphs</td>
+</tr>
+<tr>
+<td>2/13</td>
+<td>2.1:   another edge exchange for spanning trees, a condition for finding a fixed tree as a subtree;<br />distance, eccentricity, diameter, radius, center</td>
+</tr>
+<tr>
+<td>2/8</td>
+<td>2.1:   introduction to trees, equivalent conditions, edge exchange for spanning trees<br />1.4:   orientations, tournaments and kings</td>
+</tr>
+<tr>
+<td>2/6</td>
+<td>1.4:   directed graph definitions, Eulerian digraphs, de Bruijn cycles</td>
+</tr>
+<tr>
+<td>2/1</td>
+<td>1.3:   degree sequences of (loopless/simple) graphs, Havel-Hakimi<br />Exercises 1.3.16 and 1.3.19 (interesting constructions)</td>
+</tr>
+<tr>
+<td>1/30</td>
+<td>1.3:   large bipartite subgraphs, algorithmic proofs, Mantel's Theorem,<br />induction for graphs, the induction trap,<br />intro to degree sequences</td>
+</tr>
+<tr>
+<td>1/25</td>
+<td>(Pelsmajer)<br />1.3:   Degree-sum Formula, counting, hypercubes, introduction to extremal problems</td>
+</tr>
+<tr>
+<td>1/23</td>
+<td>1.2:   Eulerian circuits, maximal paths, decomposition into cycles/trails</td>
+</tr>
+<tr>
+<td>1/18</td>
+<td>1.2:   components, cut vertices/edges, induced subgraphs, bipartite graphs</td>
+</tr>
+<tr>
+<td>1/16</td>
+<td>1.2:   walks contain paths<br />1.1:   Petersen graph, some properties thereof<br />Intro, syllabus</td>
+</tr>
 <tr>
 <td>1/9,11</td>
-<td>1.1</td>
+<td>
+<p>(Kaul)<br />1.1: <br />Graph definition and models<br />acquaintanceship, complement, Ramsey problem, clique, independent set,<br />job assignment, bipartite graphs, matchings,<br />scheduling, proper colorings, chromatic number,<br />paths, cycles, subgraphs, connected graphs,<br />adjacency and incidence matrices, isomorphism,<br />vertex degrees, unlabelled graphs, complete graph, complete bipartite graph,<br />decomposition, self-complementarity</p>
+</td>
 </tr>
 </tbody>
 </table>
--->
+
 
 
 <!-- Last updated section -->
-<p class="lastupdate">Last modified January 17, 2018</p>
+<p class="lastupdate">Content migrated from Blackboard January 30, 2019</p>
 </div><!--end main-->
 </div><!--end navmaincontainer-->
 
