Add Sp18 materials

--- a/teaching/18Spring/index.html
+++ b/teaching/18Spring/index.html
@@ -28,7 +28,7 @@
 <h3>Spring 2018</h3>
 <b>Meetings:</b> TR 1:50-3:05<br>
 <b>Classroom:</b> 239 Stuart Building<br>
-<!--<b>Syllabus:</b> <a href="syllabus.pdf">link</a>-->
+<b>Syllabus:</b> <a href="syllabus.pdf">syllabus</a>, <a href="hwInst.pdf">hw suggestions</a>
 
 <p>
 <b>E-mail:</b> breiniger <i>(at)</i> iit <i>(dot)</i> edu <br>
@@ -37,7 +37,8 @@
 </p>
 
 <!--<p>See Blackboard for course materials.  After the semester I will migrate most files here.</p>-->
-
+<p><a href="hw">Homework</a>, <a href="exams">Exams</a><br>
+(Homework solutions were posted to Blackboard, but not made available here since a large portion of it came directly from the text.)</p>
 
 <h3>Schedule</h3>
 <table class="schedule" style="width: 579px; height: 550px; border:1px solid gray;">
