Add note about directory indexing

--- a/teaching/teachingArchive.html
+++ b/teaching/teachingArchive.html
@@ -26,7 +26,13 @@
 You may find some of the resources there helpful; 
 note however that some errors that were clarified in the classroom 
 were not always fixed in the posted versions.
+
+<b>I regularly left directories without index files</b>,
+ letting the server index those directories.  
+GitHub Pages won't do that, so any directory links are likely broken. 
+ You can find the relevant files through the repo directly for now.
 </p>
+
 <h4>Illinois Institute of Technology</h4>
 <ul>
 <li><a href="18Spring/">Spring 2018</a> - Graph Theory, lecture
